# ai-skills

./: .gitignore  .gitlint  .markdownlint-cli2.jsonc  .versionrc.js  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  labels.yml
docs/conventions/: build-tools.md  changelog.md  cicd.md  commits.md  dev-workflow.md  releases.md  sanitization.md  skill-ownership.md  skills-index.md  versioning.md
docs/proposals/: defensive-monitoring-timeout.md
skills/avincis-brand-design/: SKILL.md
skills/cendoj-toolkit/: SKILL.md  pyrightconfig.json  pytest.ini
skills/contract-first-clean-arch/: SKILL.md
skills/daily-work-tracking/: SKILL.md
skills/drawio-uml-shapes/: SKILL.md  shapes-reference.md
skills/huly-api/: SKILL.md
skills/tracking-parallel-agent-work/tool/: Makefile  pyproject.toml
skills/tracking-parallel-agent-work/tool/docs/: design-decisions.md
skills/tracking-parallel-agent-work/tool/src/work_extractor/: __init__.py  cli.py  config.py  config.yaml  extractor.py  models.py  pricing.py  sampling.py
skills/tracking-parallel-agent-work/tool/src/work_extractor/formatters/: json_fmt.py  yaml_fmt.py
skills/tracking-parallel-agent-work/tool/src/work_extractor/parsers/: __init__.py  claude_code.py
skills/tracking-parallel-agent-work/tool/tests/: test_extractor.py  test_parser.py  test_sampling.py
skills/tracking-parallel-agent-work/tool/tests/fixtures/: sample_session.jsonl
(+130 files in other folders)
